# sipi-bot

./: .dockerignore  .gitignore  AWESOME_MCP_ENTRY.md  CLAUDE.md  DISTRIBUTION.md  DREAM100.md  Dockerfile  HERMES_TASKS_SIPIBOT_AEO.md  LICENSE  README.md  _enrich_thin_pages.py  _expand_thin.py  _pseo_expand.py  eval_report.json  eval_report.md  fly.toml  glama.json  image-sitemap.xml  pyproject.toml  requirements.txt  sipi_bot_audit_report_2026-07-18.md  sitemap-pseo.xml  sitemap.xml  smithery.yaml  ux.css
.well-known/: security.txt
aeo/: aeo-action-plan.md  brand-gap-analysis.csv  dashboard.html  devto-cornerstone.md  devto-crosspost-guide.md  identity-split-guide.md  mcp-pr-content.md  monitor.sh  outreach-checklist.md  reddit-teardown-post.md  sipi-email-setup.md  sitemap-audit.py  software-schema.json  twitter-profile.md  yt-video-scripts.md
alternatives-to/: helicone.html  index.html  litellm.html  openai-billing.html
benchmarks/: agent-spend-percent-of-revenue.html  ai-agent-cost-per-task.html  index.html  runaway-incident-frequency.html  token-cost-by-provider.html
best/: best-ai-agent-cost-tools.html  best-llm-cost-monitoring-tools.html  best-token-cost-trackers.html  index.html
calculators/: agent-cost-calculator.html  budget-sizing-calculator.html  runaway-cost-calculator.html
cost-of/: anthropic-api-cost.html  langsmith-pricing.html  openai-api-cost.html
data/: feed.json  index.html
faq/: can-ai-agents-make-purchases.html  how-ai-spend-control-works.html  how-much-ai-agent-spend.html  how-much-should-my-ai-agent-spend.html  index.html  (+8 more)
(+393 files in other folders)
